[package]
name = "batterrier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
const_format = "0.2.32"
serde = { version = "1.0.189", features = ["derive"] }
serde_ini = "0.2.0"
